--- a/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Main/MainWindow.xaml
+++ b/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Main/MainWindow.xaml
@@ -65,7 +65,7 @@
                 <Label Content="{Binding LicensingStateDescription}"/>
             </StatusBarItem>
             <StatusBarItem Visibility="{Binding LicensingStateIsInvalid, Converter={StaticResource BooleanToVisibilityConverter}}">
-                <Button Click="OnClickLicensing">Open License Manager</Button>
+                <Button Padding="4 0 4 0" Click="OnClickLicensing">Open License Manager</Button>
             </StatusBarItem>
         </StatusBar>
         <StackPanel HorizontalAlignment="Center"
@@ -83,6 +83,9 @@
                         <LineBreak/>
                         Find documentation about SLASCONE RestAPI at:
                         <Hyperlink Click="OnClickHyperlinkSlasconeSupport">https://support.slascone.com</Hyperlink>
+                        <LineBreak/>
+                        Visit the SLASCONE portal at:
+                        <Hyperlink Click="OnClickHyperlinkSlasconePortal">https://portal.slascone.com</Hyperlink>
                     </Span>
                 </TextBlock.Inlines>
             </TextBlock>
