--- a/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Licensing/LicenseKeyWindow.xaml
+++ b/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Licensing/LicenseKeyWindow.xaml
@@ -5,15 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Slascone.Provisioning.Wpf.Sample.NuGet.Licensing"
         mc:Ignorable="d"
-        Title="LicenseKeyWindow" Height="280" Width="400">
+        Title="Online Activation" Height="280" Width="400">
     <StackPanel>
-        <Label Margin="20 15 20 5">Please enter a License key</Label>
+        <Label Margin="20 15 20 5">Please enter your license key</Label>
         <TextBox Name="LicenseKey" Margin="20 0 20 5"></TextBox>
         <DockPanel>
             <Button DockPanel.Dock="Right" Margin="5 5 20 0" Width="100" Click="OnClickCancel">Cancel</Button>
-            <Button HorizontalAlignment="Right" Margin="20 5 5 0" Width="100" Click="OnClickOk">Ok</Button>
+            <Button HorizontalAlignment="Right" Margin="20 5 5 0" Width="100" Click="OnClickOk">Activate</Button>
         </DockPanel>
         <Label Margin="20 15 20 5">or:</Label>
-        <Button Margin="20 5 20 0" Click="OnClickDemoLicense">use the demo License key</Button>
+        <Button Margin="20 5 20 0" Click="OnClickDemoLicense">use a demo license key</Button>
     </StackPanel>
 </Window>
