--- a/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/App.xaml
+++ b/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/App.xaml
@@ -12,6 +12,11 @@
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontFamily" Value="Ebrima"/>
         </Style>
+        <Style TargetType="{x:Type TextBox}">
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontFamily" Value="Ebrima"/>
+            <Setter Property="Padding" Value="4"/>
+        </Style>
         <Style TargetType="{x:Type MenuItem}">
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontFamily" Value="Ebrima"/>
