--- a/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Licensing/LicenseKeyWindow.xaml
+++ b/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Licensing/LicenseKeyWindow.xaml
@@ -10,10 +10,8 @@
         <Label Margin="20 15 20 5">Please enter your license key</Label>
         <TextBox Name="LicenseKey" Margin="20 0 20 5"></TextBox>
         <DockPanel>
-            <Button DockPanel.Dock="Right" Margin="5 5 20 0" Width="100" Click="OnClickCancel">Cancel</Button>
+            <Button DockPanel.Dock="Right" Margin="5 5 20 0" Width="100" Click="OnClickDemoLicense">Demo key</Button>
             <Button HorizontalAlignment="Right" Margin="20 5 5 0" Width="100" Click="OnClickOk">Activate</Button>
         </DockPanel>
-        <Label Margin="20 15 20 5">or:</Label>
-        <Button Margin="20 5 20 0" Click="OnClickDemoLicense">use a demo license key</Button>
     </StackPanel>
 </Window>
