--- a/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/App.xaml
+++ b/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/App.xaml
@@ -1,8 +1,10 @@
 ﻿<Application x:Class="Slascone.Provisioning.Wpf.Sample.NuGet.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:main="clr-namespace:Slascone.Provisioning.Wpf.Sample.NuGet.Main"
              StartupUri="/Main/MainWindow.xaml">
     <Application.Resources>
+        <main:MainViewModel x:Key="MainViewModel" />
         <BitmapImage x:Key="Logo" UriSource="/Resources/DB-SL-Logo-forcircles256px.png" />
         <BitmapImage x:Key="Check" UriSource="/Resources/check.png" />
         <BitmapImage x:Key="Attention" UriSource="/Resources/attention.png" />
@@ -58,7 +60,7 @@
             </Style.Triggers>
 
         </Style>
-        <Style TargetType="{x:Type Label}">
+        <Style TargetType="{x:Type Label}" x:Key="LabelDefaultStyle">
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontFamily" Value="Ebrima"/>
         </Style>
