--- a/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Licensing/LicenseManagerWindow.xaml
+++ b/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Licensing/LicenseManagerWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:converters="clr-namespace:Slascone.Provisioning.Wpf.Sample.NuGet.Converters"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=local:LicenseManagerViewModel}"
-        Title="License Manager" Height="700" Width="750">
+        Title="License Manager" Width="800" Height="760">
     <Window.Resources>
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </Window.Resources>
@@ -97,11 +97,6 @@
                 </Button>
                 <Button Margin="20 5 20 5" 
                         Visibility="{Binding IsOfflineLicensingMode, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"
-                        Command="{Binding RequestActivationFileCommand}">
-                    Request activation file
-                </Button>
-                <Button Margin="20 5 20 5" 
-                        Visibility="{Binding IsOfflineLicensingMode, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"
                         Command="{Binding UploadActivationFileCommand}">
                     Upload activation file
                 </Button>
@@ -109,7 +104,7 @@
         </DockPanel>
         <StackPanel>
             <Label FontWeight="Bold">License information</Label>
-            <TextBlock Name="licenseInformation"  Margin="5" />
+            <TextBlock Name="licenseInformation"  Margin="5" TextWrapping="Wrap" />
         </StackPanel>
     </DockPanel>
 </Window>
