--- a/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Main/MainWindow.xaml
+++ b/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Main/MainWindow.xaml
@@ -7,7 +7,8 @@
         xmlns:main="clr-namespace:Slascone.Provisioning.Wpf.Sample.NuGet.Main"
         d:DataContext="{d:DesignInstance Type=main:MainViewModel}"
         mc:Ignorable="d"
-        Title="SLASCONE Demo Client" Height="450" Width="800">
+        Title="SLASCONE Demo Client" 
+        Height="500" Width="820">
     <Window.Resources>
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </Window.Resources>
@@ -18,6 +19,9 @@
             </MenuItem>
             <MenuItem Header="_Licensing">
                 <MenuItem Header="_License Manager ..." Click="OnClickLicensing"/>
+            </MenuItem>
+            <MenuItem Header="_Demo">
+                <MenuItem Header="Simulate _offline situation" IsCheckable="True" IsChecked="{Binding Offline, Mode=OneWay}" Click="OnClickOffline"/>
             </MenuItem>
             <MenuItem Header="_Help">
                 <MenuItem Header="_About ..." Click="OnClickAbout"/>
@@ -66,6 +70,11 @@
             </StatusBarItem>
             <StatusBarItem Visibility="{Binding LicensingStateIsInvalid, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <Button Padding="6 2 6 2" Click="OnClickLicensing">Open License Manager</Button>
+            </StatusBarItem>
+            <StatusBarItem HorizontalAlignment="Right">
+                <Label Content="No internet" 
+                       Foreground="DarkRed" 
+                       Visibility="{Binding Offline, Converter={StaticResource BooleanToVisibilityConverter}}"/>
             </StatusBarItem>
         </StatusBar>
         <StackPanel HorizontalAlignment="Center"
