--- a/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/App.xaml
+++ b/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/App.xaml
@@ -10,6 +10,7 @@
         <BitmapImage x:Key="Attention" UriSource="/Resources/attention.png" />
         <BitmapImage x:Key="Exclamation" UriSource="/Resources/exclamation.png" />
         <BitmapImage x:Key="Circle" UriSource="/Resources/circle.png" />
+        <BitmapImage x:Key="NoUser" UriSource="/Resources/nouser.png" />
         <Style TargetType="{x:Type TextBlock}">
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontFamily" Value="Ebrima"/>
