--- a/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Licensing/LicenseManagerWindow.xaml
+++ b/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Licensing/LicenseManagerWindow.xaml
@@ -29,6 +29,11 @@
                    Margin="10"
                    Width="32"
                    Height="32"/>
+            <Image Source="{StaticResource NoUser}"
+                   Visibility="{Binding IsIconNoUserVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"
+                   Margin="10"
+                   Width="32"
+                   Height="32"/>
             <Image Source="{StaticResource Circle}"
                    Visibility="{Binding IsIconPendingVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"
                    Margin="10"
@@ -73,7 +78,14 @@
                     Offline Activation (file based)
                 </RadioButton>
 
-                <!--  Online licensing  -->
+                <RadioButton GroupName="LicensingMode" 
+                             Name="UserLicensingRadioButton"
+                             IsChecked="{Binding IsClientTypeUser}"
+                             Margin="20 5 20 5">
+                    User licensing
+                </RadioButton>
+
+                <!--  Online licensing (device) -->
                 <Button Margin="20 15 20 5" 
                         Visibility="{Binding IsOnlineLicensingMode, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"
                         Command="{Binding ActivateLicenseCommand}">
@@ -84,9 +96,23 @@
                     Command="{Binding UnassignLicenseCommand}">
                     Unassign License
                 </Button>
+
+                <!--  Online licensing (user) -->
+                <Button Margin="20 15 20 5" 
+                        Visibility="{Binding SignInUserCommand, Mode=OneWay, Converter={StaticResource CanExecuteToVisibilityConverter}}"
+                        Command="{Binding SignInUserCommand}">
+                    User sign in
+                </Button>
                 <Button Margin="20 5 20 5" 
-                    Visibility="{Binding IsOnlineLicensingMode, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"
-                    Command="{Binding RefreshLicenseCommand}">
+                        Visibility="{Binding SignOutUserCommand, Mode=OneWay, Converter={StaticResource CanExecuteToVisibilityConverter}}"
+                        Command="{Binding SignOutUserCommand}">
+                    User sign out
+                </Button>
+
+                <!--  Online licensing (device & user) -->
+                <Button Margin="20 5 20 5" 
+                        Visibility="{Binding RefreshLicenseCommand, Mode=OneWay, Converter={StaticResource CanExecuteToVisibilityConverter}}"
+                        Command="{Binding RefreshLicenseCommand}">
                     Refresh License (Heartbeat)
                 </Button>
 
@@ -101,6 +127,7 @@
                         Command="{Binding UploadActivationFileCommand}">
                     Upload activation file
                 </Button>
+
             </StackPanel>
             <Image Source="{Binding ActivationFileRequestQr}"
                    MaxWidth="300"
