--- a/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Main/MainWindow.xaml
+++ b/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Main/MainWindow.xaml
@@ -20,6 +20,13 @@
             <MenuItem Header="_Licensing">
                 <MenuItem Header="_License Manager ..." Click="OnClickLicensing"/>
             </MenuItem>
+            <MenuItem Header="_Features" ItemsSource="{Binding Features}">
+                <MenuItem.ItemTemplate>
+                    <DataTemplate>
+                        <MenuItem Header="{Binding Name}" />
+                    </DataTemplate>
+                </MenuItem.ItemTemplate>
+            </MenuItem>
             <MenuItem Header="_Demo">
                 <MenuItem Header="Simulate _offline state" IsCheckable="True" IsChecked="{Binding Offline, Mode=OneWay}" Click="OnClickOffline"/>
             </MenuItem>
