--- a/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/App.xaml
+++ b/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/App.xaml
@@ -70,6 +70,24 @@
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="FontFamily" Value="Ebrima"/>
         </Style>
+        <Style x:Key="InlineButtonStyle" TargetType="{x:Type Button}">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="Padding" Value="0,-2,0,0"/>
+            <Setter Property="Margin" Value="5,0,5,0"/> <!-- Adjusted Margin to move button along Y axis -->
+            <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+            <Setter Property="FontSize" Value="{DynamicResource {x:Static SystemFonts.MessageFontSizeKey}}"/>
+            <Setter Property="FontFamily" Value="{DynamicResource {x:Static SystemFonts.MessageFontFamilyKey}}"/>
+            <!-- <Setter Property ="LayoutTransform" Value=""></Setter> -->
+            <Setter Property ="VerticalAlignment" Value="Bottom"></Setter>
+            <Setter Property ="VerticalContentAlignment" Value="Bottom"></Setter>
+        </Style>
+        <Style x:Key="InlineLabelStyle" TargetType="{x:Type Label}">
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontFamily" Value="Ebrima"/>
+            <Setter Property="Padding" Value="0 0 0 0" />
+        </Style>
     </Application.Resources>
 
 </Application>
