--- a/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Main/MainWindow.xaml
+++ b/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Main/MainWindow.xaml
@@ -23,7 +23,14 @@
             <MenuItem Header="_Features" ItemsSource="{Binding Features}">
                 <MenuItem.ItemTemplate>
                     <DataTemplate>
-                        <MenuItem Header="{Binding Name}" />
+                        <MenuItem Header="{Binding Name}" Click="OnClickFeature" />
+                    </DataTemplate>
+                </MenuItem.ItemTemplate>
+            </MenuItem>
+            <MenuItem Header="Limi_tations" ItemsSource="{Binding Limitations}">
+                <MenuItem.ItemTemplate>
+                    <DataTemplate>
+                        <MenuItem Header="{Binding Name}" Tag="{Binding Id}" Click="OnClickLimitation" />
                     </DataTemplate>
                 </MenuItem.ItemTemplate>
             </MenuItem>
